--- a/packages/tools/sugar/src/node/docblock/renderers/html/tags/example.hbs
+++ b/packages/tools/sugar/src/node/docblock/renderers/html/tags/example.hbs
@@ -1,6 +1,6 @@
 {{#if example}}{{#example}}
-<div class="{{ classname 'db-example' }}">
-  <h2 class="{{ 'h2 m-t m-b-small' }}">
+<div class="{{ classname 'db-tag-example' }}">
+  <h2 class="{{ 'h2 mar-t mar-b-30' }}">
     Example <span class="{{ classname 'db-language' }}">{{language}}</span>
   </h2>
 
