--- a/packages/tools/sugar/src/scss/core/init/_settings-to-css-variables.scss
+++ b/packages/tools/sugar/src/scss/core/init/_settings-to-css-variables.scss
@@ -1,7 +1,20 @@
+@use 'sass:map';
+
 @mixin init-settings-to-css-variables() {
-  $flattenSettings: map-flatten($__settings, '-');
+  $settings: $__settings;
+
+  @include define-color-variables();
+  $settings: map-remove($settings, 'colors');
+
+  $flattenSettings: map-flatten($settings, '-');
   @each $key, $value in $flattenSettings {
-    @if type-of($value) == number or type-of($value) == string or type-of($value) == color {
+    @if type-of($value) ==
+      number or
+      type-of($value) ==
+      string or
+      type-of($value) ==
+      color
+    {
       $res: var-define($key, $value);
     }
   }
