--- a/packages/tools/sugar/src/scss/font/class/_font.scss
+++ b/packages/tools/sugar/src/scss/font/class/_font.scss
@@ -22,7 +22,7 @@
     @each $name, $font in setting('fonts.families') {
       @if class-match-namespace('sugar.font.family.#{$name}') {
         /**
-          * @name       	  #{sel(font-#{$name})}
+          * @name       	  #{sel(ft-#{$name})}
           * @namespace       sugar.scss.font.class
           * @class-namespace           sugar.font.family.#{$name}
           * @type        Classname
@@ -30,14 +30,14 @@
           * Apply the font family **#{$name}**
           *
           * @example 	html
-          * <div class="#{sel(font-#{$name})}">
+          * <div class="#{sel(ft-#{$name})}">
           * 	I have the font family "#{$name}" applied
           * </div>
           *
           * @since       1.0.0
           * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
           */
-        #{sel("font-#{$name}")} {
+        #{sel("ft-#{$name}")} {
           @include font($name);
         }
       }
@@ -47,7 +47,7 @@
     @each $name, $size in setting('fonts.sizes') {
       @if class-match-namespace('sugar.font.size.#{$name}') {
         /**
-          * @name       	  #{sel(font-#{$name})}
+          * @name       	  #{sel(ft-#{$name})}
           * @namespace       sugar.scss.font.class
           * @class-namespace           sugar.font.size.#{$name}
           * @type        Classname
@@ -55,14 +55,14 @@
           * Apply the font size **#{$name}** (**#{$size}**)
           *
           * @example 	html
-          * <div class="#{sel(font-#{$name})}">
+          * <div class="#{sel(ft-#{$name})}">
           * 	I have the font size "#{$name}" applied
           * </div>
           *
           * @since       1.0.0
           * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
           */
-        #{sel("font-#{$name}")} {
+        #{sel("ft-#{$name}")} {
           font-size: font-size($name);
         }
       }
