--- a/packages/tools/sugar-ui/src/css/03_generic/_classes.scss
+++ b/packages/tools/sugar-ui/src/css/03_generic/_classes.scss
@@ -16,10 +16,10 @@
 // @include Sugar.classes('sugar.helper.display');
 // @include Sugar.classes('sugar.helper.flex');
 // @include Sugar.classes('sugar.helper.link');
-// @include Sugar.classes('sugar.helper.margin');
+@include Sugar.classes('sugar.helper.margin');
 // @include Sugar.classes('sugar.helper.media');
 // @include Sugar.classes('sugar.helper.overflow');
-// @include Sugar.classes('sugar.helper.padding');
+@include Sugar.classes('sugar.helper.padding');
 // @include Sugar.classes('sugar.helper.pointer');
 // @include Sugar.classes('sugar.helper.position');
 // @include Sugar.classes('sugar.helper.pull');
@@ -30,10 +30,6 @@
 // @include Sugar.classes('sugar.helper.transmation');
 // @include Sugar.classes('sugar.helper.user-select');
 // @include Sugar.classes('sugar.helper.vertical-align');
-
-.youhou {
-  content: 'plopissime';
-}
 
 @include Sugar.classes('sugar.component.ul');
 @include Sugar.classes('sugar.component.ol');
