--- a/packages/tools/sugar/src/node/docblock/renderers/html/tags/author.hbs
+++ b/packages/tools/sugar/src/node/docblock/renderers/html/tags/author.hbs
@@ -1,16 +1,16 @@
 {{#if author}}{{#author}}
-<div class="{{ classname 'db-author' }}">
-  <h3 class="{{ classname 'h3 m-t m-b-small' }}">
+<div class="{{ classname 'db-tag-author' }}">
+  <h3 class="{{ classname 'h3 mar-t mar-b-30' }}">
     Author
   </h3>
-  <span class="{{ classname 'db-name' }}">{{name}}</span>
+  <span class="{{ classname 'db-tag-name' }}">{{name}}</span>
   {{#if email}}
-    <a class="{{ classname 'db-email' }}" href="mailto:{{email}}">
+    <a class="{{ classname 'db-tag-email' }}" href="mailto:{{email}}">
       {{email}}
     </a>
   {{/if}}
   {{#if url}}
-    <a class="{{ classname 'db-url' }}" href="{{url}}" target="_blank">
+    <a class="{{ classname 'db-tag-url' }}" href="{{url}}" target="_blank">
       {{url}}
     </a>
   {{/if}}
