--- a/packages/tools/sugar/src/scss/color/function/_color.scss
+++ b/packages/tools/sugar/src/scss/color/function/_color.scss
@@ -25,36 +25,23 @@
  * - saturation {Percent}
  *
  * @param 		{String|Color} 		$color 				The color name or the color value to manipulate
- * @param 		{String|List} 			[$modifier=null] 	The color modifier to apply. Can be a registered modifier name or a modifier list
+ * @param 		{String} 			[$modifiers=null] 	The color modifiers to apply. See color-mod css function signature for more infos: https://www.digitalocean.com/community/tutorials/css-color-function
  * @return 		{Color} 									The actual color value
  *
  * @example 	 	scss
  * // default color (settings.colors.default)
  * $myColor : Sugar.color(default);
- * // primary color (settings.colors.primary)
- * $primary : Sugar.color(primary);
- * // manipulate
- * $primary-dark : Sugar.color(primary, -darken 10%);
- * // registered modifier
- * $primary-light : Sugar.color(primary, light);
- * // $name as list
- * $modified primary : Sugar.color((primary, -darken 10%));
  *
  * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@function color($name, $actions: null) {
-
-  // @if $actions and type-of($actions) == number {
-  //   $actions: '#{$actions}';
-  // }
-
+@function color($name, $modifiers: null, $id: null) {
   // test parameters
-  $name: test-argument("color", "name", "color|string", $name);
-  $actions: test-argument(
-    "color",
-    "actions",
-    "map|list|string|number",
-    $actions
+  $name: test-argument('color', 'name', 'color|string', $name);
+  $modifiers: test-argument(
+    'color',
+    'modifiers',
+    'string|list|number',
+    $modifiers
   );
 
   $colorColor: null;
@@ -66,123 +53,129 @@
     $colorColor: setting('colors.#{$name}.color');
   }
 
-  @if $colorColor != null and is($colorColor, string) {
-    @return color($colorColor, $actions);
+  @if is($colorColor, string) {
+    $colorColor: color($colorColor, $modifiers);
   }
 
-  @if not is($colorColor, color) {
-    @error("It seem's that you have passed a color argument "#{$colorColor}" that is neither a registered color, neither a valid color code...");
+  @if not $colorColor {
+    @error ('Sorry but the requested color "#{$name}" does not exists in the settings');
   }
 
-  $modifier: null;
-  $actionsMap: null;
+  $modifiersMap: null;
 
-  @if type-of($actions) == list {
-    $actionsMap: dash-to-map($actions);
-  } @else if type-of($actions) == string or type-of($actions) == number {
-    $modifier: $actions;
+  @if type-of($modifiers) == list {
+    $modifiersMap: dash-to-map($modifiers);
+  } @else if type-of($modifiers) == string or type-of($modifiers) == number {
+    $modifier: $modifiers;
     $modifierArgs: setting('colors.#{$name}.modifiers.#{$modifier}');
-    @if type-of($modifierArgs) == list or type-of($modifierArgs) == string {
-      $actionsMap: dash-to-map($modifierArgs);
+
+    @if is($modifierArgs, color) {
+      @return $modifierArgs;
+    } @else if
+      type-of($modifierArgs) ==
+      list or
+      type-of($modifierArgs) ==
+      string
+    {
+      $modifiersMap: dash-to-map($modifierArgs);
     } @else if type-of($modifierArgs) == map {
-      $actionsMap: $modifierArgs;
+      $modifiersMap: $modifierArgs;
     }
   }
 
- 
+  $color: _color-process($colorColor, $modifiersMap);
 
-  // @if $name != null and $modifier != null {
-  //   $varName: var-name('colors.#{$name}.#{$modifier}');
-  //   $color: _color-process($colorColor, $actionsMap);
-  //   $res: var-define($varName, $color);
-  //   @return unquote('var(#{$varName})');
-  // } @else if $name != null and $modifier == null and $actionsMap == null {
-  //   $varName: var-name('colors.#{$name}');
-  //   $color: _color-process($colorColor, $actionsMap);
-  //   $res: var-define($varName, $color);
-  //   @return unquote('var(#{$varName})');
+  // @if $id != null {
+  //   :root {
+  //     --s-custom-color-#{$id}: $color;
+  //   }
+  //   @return var(--s-custom-color-#{$id}, $color);
+  // }
+
+  // $modifier: null;
+  // $actionsMap: null;
+
+  // @if type-of($actions) == list {
+  //   $actionsMap: dash-to-map($actions);
+  // } @else if type-of($actions) == string or type-of($actions) == number {
+  //   $modifier: $actions;
+  //   $modifierArgs: setting('colors.#{$name}.modifiers.#{$modifier}');
+  //   @if type-of($modifierArgs) == list or type-of($modifierArgs) == string {
+  //     $actionsMap: dash-to-map($modifierArgs);
+  //   } @else if type-of($modifierArgs) == map {
+  //     $actionsMap: $modifierArgs;
+  //   }
   // }
 
   // return the color
-  $color: _color-process($colorColor, $actionsMap);
+  // $color: _color-process($colorColor, $actionsMap);
   @return $color;
 }
 
 @function _color-process($color, $actions: ()) {
-
   @if $actions == null {
     $actions: ();
   }
 
-  $hue: test-argument(
-    "color",
-    "actions.hue",
-    number,
-    map.get($actions, hue)
-  );
+  $hue: test-argument('color', 'actions.hue', number, map.get($actions, hue));
   $lighten: test-argument(
-    "color",
-    "actions.lighten",
+    'color',
+    'actions.lighten',
     number,
     map.get($actions, lighten)
   );
   $darken: test-argument(
-    "color",
-    "actions.darken",
+    'color',
+    'actions.darken',
     number,
     map.get($actions, darken)
   );
   $saturate: test-argument(
-    "color",
-    "actions.saturate",
+    'color',
+    'actions.saturate',
     number,
     map.get($actions, saturate)
   );
   $desaturate: test-argument(
-    "color",
-    "actions.desaturate",
+    'color',
+    'actions.desaturate',
     number,
     map.get($actions, desaturate)
   );
   $grayscale: test-argument(
-    "color",
-    "actions.grayscale",
+    'color',
+    'actions.grayscale',
     boolean,
     map.get($actions, grayscale)
   );
   $complement: test-argument(
-    "color",
-    "actions.complement",
+    'color',
+    'actions.complement',
     boolean,
     map.get($actions, complement)
   );
   $invert: test-argument(
-    "color",
-    "actions.invert",
+    'color',
+    'actions.invert',
     boolean,
     map.get($actions, invert)
   );
   $opacity: test-argument(
-    "color",
-    "actions.opacity",
+    'color',
+    'actions.opacity',
     number,
     map.get($actions, opacity)
   );
-  $mix: test-argument(
-    "color",
-    "actions.mix",
-    color,
-    map.get($actions, mix)
-  );
+  $mix: test-argument('color', 'actions.mix', color, map.get($actions, mix));
   $saturation: test-argument(
-    "color",
-    "actions.saturation",
+    'color',
+    'actions.saturation',
     number,
     map.get($actions, saturation)
   );
   $lightness: test-argument(
-    "color",
-    "actions.lightness",
+    'color',
+    'actions.lightness',
     number,
     map.get($actions, lightness)
   );
@@ -199,7 +192,7 @@
     }
     // darken
     @if $action == darken {
-      $color: color.adjust($color, $lightness: -($value));
+      $color: color.adjust($color, $lightness: - ($value));
     }
     // saturate
     @if $action == saturate {
@@ -207,7 +200,7 @@
     }
     // desaturate
     @if $action == desaturate {
-      $color: color.adjust($color, $saturation: -($value));
+      $color: color.adjust($color, $saturation: - ($value));
     }
     // grayscale
     @if $action == grayscale and $value == true {
@@ -224,7 +217,7 @@
     // opacity
     @if $action == opacity and meta.type-of($value) == number {
       $transparentize: 1 - strip-units($value);
-      @if math.unit($value) == "%" {
+      @if math.unit($value) == '%' {
         $transparentize: (100 - strip-units($value)) / 100;
       }
       $color: color.adjust($color, $alpha: -$transparentize);
