--- a/packages/tools/sugar/src/scss/component/title/mixin/_title.scss
+++ b/packages/tools/sugar/src/scss/component/title/mixin/_title.scss
@@ -14,41 +14,48 @@
  * @since       2.0.0
  * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
- @mixin title($level, $font-size: null, $font-family: null, $vr-margin-bottom: null, $scope: null) {
-    
-    @include context('components.title.h#{$level}') {
-  
-      @include scope('bare', $scope) {
-
-        @if not $font-size {
-          $font-size: setting('font-size');
-        }
-        @if not $vr-margin-bottom {
-          $vr-margin-bottom: setting('vr-margin-bottom');
-        }
-
-        display: block;
-        font-size: font-size($font-size);
-    
-        @include vr-scope() {
-          margin-bottom: space($vr-margin-bottom);
-        }
+@mixin title(
+  $level,
+  $font-size: null,
+  $font-family: null,
+  $vr-margin-bottom: null,
+  $scope: null
+) {
+  @include context('components.title.h#{$level}') {
+    @include scope('bare', $scope) {
+      @if not $font-size {
+        $font-size: setting('font-size');
       }
-      @include scope('style', $scope) {
+      @if not $vr-margin-bottom {
+        $vr-margin-bottom: setting('vr-margin-bottom');
+      }
 
-        @if not $font-family {
-          $font-family: setting('font-family');
-        }
+      display: block;
+      font-size: font-size($font-size);
 
-        font-family: font-family($font-family);
-    
-        $props: setting('.');
-        @each $prop in map-keys($props) {
-          @if $prop != 'font-size' and $prop != 'font-family' and $prop != 'vr-margin-bottom' {
-            #{$prop}: map-get($props, $prop);
-          }
+      @include vr-scope() {
+        margin-bottom: space($vr-margin-bottom);
+      }
+    }
+    @include scope('style', $scope) {
+      @if not $font-family {
+        $font-family: setting('font-family');
+      }
+
+      font-family: font-family($font-family);
+
+      $props: setting('.');
+      @each $prop in map-keys($props) {
+        @if $prop !=
+          'font-size' and
+          $prop !=
+          'font-family' and
+          $prop !=
+          'vr-margin-bottom'
+        {
+          #{$prop}: map-get($props, $prop);
         }
       }
     }
   }
-  
+}
