--- a/packages/tools/sugar/src/scss/core/map/function/_map-remove.scss
+++ b/packages/tools/sugar/src/scss/core/map/function/_map-remove.scss
@@ -24,5 +24,5 @@
  * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
 @function map-remove($map, $keys...) {
-  @return map.remove($map, $keys);
+  @return map.remove($map, $keys...);
 }
