--- a/packages/tools/sugar/src/scss/core/space/function/_space.scss
+++ b/packages/tools/sugar/src/scss/core/space/function/_space.scss
@@ -19,6 +19,7 @@
  * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
 @function space($size) {
+  $size: '#{$size}';
   @if type-of(string.unquote($size)) == 'number' {
     @return $size;
   }
