--- a/packages/tools/sugar/src/scss/helper/class/_margin.scss
+++ b/packages/tools/sugar/src/scss/helper/class/_margin.scss
@@ -5,21 +5,6 @@
  *
  * This mixin generate all the "margin" related helper classes.
  *
- * @classname     #{sel(margin-[size])}              Set the **margins** to the a special size
- * @classname     #{sel(margin-bottom-[size])}              Set the **bottom** margin to a special size
- * @classname     #{sel(margin-top-[size])}              Set the **top** margin to a special size
- * @classname     #{sel(margin-left-[size])}              Set the **left** margin to a special size
- * @classname     #{sel(margin-right-[size])}              Set the **right** margin to a special size
- * @classname     #{sel(margin-x-[size])}              Set the **x** margin to a special size
- * @classname     #{sel(margin-y-[size])}              Set the **top and bottom** margins to a special size
- * @classname     #{sel(no-margin)}              Remove **all** the margins
- * @classname     #{sel(no-margin-top)}              Remove **top** the margin
- * @classname     #{sel(no-margin-right)}              Remove **right** the margin
- * @classname     #{sel(no-margin-bottom)}              Remove **bottom** the margin
- * @classname     #{sel(no-margin-left)}              Remove **left** the margin
- * @classname     #{sel(no-margin-x)}              Remove **x** margins
- * @classname     #{sel(no-margin-y)}              Remove **top and bottom** margins
- *
  * @example         scss
  * @include Sugar.helper-margin-classes();
  *
@@ -28,10 +13,164 @@
  */
 @mixin helper-margin-classes() {
   @if class-match-namespace('sugar.helper.margin') {
-    $margins: setting('margins');
+    $defaultMargin: setting('margins.default');
+    $margins: setting('margins.sizes');
+
+    @if map-has-key($margins, $defaultMargin) {
+      @if class-match-namespace('sugar.helper.margin.default') {
+        $cname: selector('mar');
+        /**
+          * @name       	#{$cname}
+          * @namespace       sugar.scss.core.class
+          * @class-namespace           sugar.helper.margin.default
+          * @type        Classname
+          *
+          * Set the **margins** to the **default** size (#{$defaultMargin})
+          *
+          * @example 	html
+          * <div class="#{$cname}" style="background:#{color(primary)}; width:100px; height:5px"></div>
+          * <div style="background:#{color(secondary)}; width:100px; height:5px"></div>
+          *
+          * @since       1.0.0
+          * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
+          */
+        .#{$cname} {
+          margin: setting('margins.sizes.#{$defaultMargin}');
+        }
+      }
+      @if class-match-namespace('sugar.helper.margin.bottom.default') {
+        $cname: selector('mar-b');
+        /**
+          * @name       	#{$cname}
+          * @namespace       sugar.scss.core.class
+          * @class-namespace           sugar.helper.margin.bottom.default
+          * @type        Classname
+          *
+          * Set the **margin bottom** to the **default** size (#{$defaultMargin})
+          *
+          * @example 	html
+          * <div class="#{$cname}" style="background:#{color(primary)}; width:100px; height:5px"></div>
+          * <div style="background:#{color(secondary)}; width:100px; height:5px"></div>
+          *
+          * @since       1.0.0
+          * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
+          */
+        .#{$cname} {
+          margin-bottom: setting('margins.sizes.#{$defaultMargin}');
+        }
+      }
+      @if class-match-namespace('sugar.helper.margin.top.default') {
+        $cname: selector('mar-t');
+        /**
+          * @name       	#{$cname}
+          * @namespace       sugar.scss.core.class
+          * @class-namespace           sugar.helper.margin.top.default
+          * @type        Classname
+          *
+          * Set the **margin top** to the **default** size (#{$defaultMargin})
+          *
+          * @example 	html
+          * <div class="#{$cname}" style="background:#{color(primary)}; width:100px; height:5px"></div>
+          * <div style="background:#{color(secondary)}; width:100px; height:5px"></div>
+          *
+          * @since       1.0.0
+          * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
+          */
+        .#{$cname} {
+          margin-top: setting('margins.sizes.#{$defaultMargin}');
+        }
+      }
+      @if class-match-namespace('sugar.helper.margin.left.default') {
+        $cname: selector('mar-l');
+        /**
+          * @name       	#{$cname}
+          * @namespace       sugar.scss.core.class
+          * @class-namespace           sugar.helper.margin.left.default
+          * @type        Classname
+          *
+          * Set the **margin left** to the **default** size (#{$defaultMargin})
+          *
+          * @example 	html
+          * <div class="#{$cname}" style="background:#{color(primary)}; width:100px; height:5px"></div>
+          * <div style="background:#{color(secondary)}; width:100px; height:5px"></div>
+          *
+          * @since       1.0.0
+          * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
+          */
+        .#{$cname} {
+          margin-left: setting('margins.sizes.#{$defaultMargin}');
+        }
+      }
+      @if class-match-namespace('sugar.helper.margin.right.default') {
+        $cname: selector('mar-r');
+        /**
+          * @name       	#{$cname}
+          * @namespace       sugar.scss.core.class
+          * @class-namespace           sugar.helper.margin.right.default
+          * @type        Classname
+          *
+          * Set the **margin right** to the **default** size (#{$defaultMargin})
+          *
+          * @example 	html
+          * <div class="#{$cname}" style="background:#{color(primary)}; width:100px; height:5px"></div>
+          * <div style="background:#{color(secondary)}; width:100px; height:5px"></div>
+          *
+          * @since       1.0.0
+          * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
+          */
+        .#{$cname} {
+          margin-right: setting('margins.sizes.#{$defaultMargin}');
+        }
+      }
+      @if class-match-namespace('sugar.helper.margin.x.default') {
+        $cname: selector('mar-x');
+        /**
+          * @name       	#{$cname}
+          * @namespace       sugar.scss.core.class
+          * @class-namespace           sugar.helper.margin.x.default
+          * @type        Classname
+          *
+          * Set the **margins x** to the **default** size (#{$defaultMargin})
+          *
+          * @example 	html
+          * <div class="#{$cname}" style="background:#{color(primary)}; width:100px; height:5px"></div>
+          * <div style="background:#{color(secondary)}; width:100px; height:5px"></div>
+          *
+          * @since       1.0.0
+          * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
+          */
+        .#{$cname} {
+          margin-left: setting('margins.sizes.#{$defaultMargin}');
+          margin-right: setting('margins.sizes.#{$defaultMargin}');
+        }
+      }
+      @if class-match-namespace('sugar.helper.margin.y.default') {
+        $cname: selector('mar-y');
+        /**
+          * @name       	#{$cname}
+          * @namespace       sugar.scss.core.class
+          * @class-namespace           sugar.helper.margin.y.default
+          * @type        Classname
+          *
+          * Set the **margins y** to the **default** size (#{$defaultMargin})
+          *
+          * @example 	html
+          * <div class="#{$cname}" style="background:#{color(primary)}; width:100px; height:5px"></div>
+          * <div style="background:#{color(secondary)}; width:100px; height:5px"></div>
+          *
+          * @since       1.0.0
+          * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
+          */
+        .#{$cname} {
+          margin-top: setting('margins.sizes.#{$defaultMargin}');
+          margin-bottom: setting('margins.sizes.#{$defaultMargin}');
+        }
+      }
+    }
+
     @each $name, $size in $margins {
       @if class-match-namespace('sugar.helper.margin.#{$name}') {
-        $cname: selector('margin-#{$name}');
+        $cname: selector('mar-#{$name}');
         /**
           * @name       	#{$cname}
           * @namespace       sugar.scss.core.class
@@ -48,12 +187,12 @@
           * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
           */
         .#{$cname} {
-          margin: space($name);
+          margin: $size;
         }
       }
 
       @if class-match-namespace('sugar.helper.margin.bottom.#{$name}') {
-        $cname: selector('margin-bottom-#{$name}');
+        $cname: selector('mar-b-#{$name}');
         /**
           * @name       	#{$cname}
           * @namespace       sugar.scss.core.class
@@ -70,12 +209,12 @@
           * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
           */
         .#{$cname} {
-          margin-bottom: space($name);
+          margin-bottom: $size;
         }
       }
 
       @if class-match-namespace('sugar.helper.margin.top.#{$name}') {
-        $cname: selector('margin-top-#{$name}');
+        $cname: selector('mar-t-#{$name}');
         /**
           * @name          #{$cname}
           * @namespace       sugar.scss.core.class
@@ -92,12 +231,12 @@
           * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
           */
         .#{$cname} {
-          margin-top: space($name);
+          margin-top: $size;
         }
       }
 
       @if class-match-namespace('sugar.helper.margin.left.#{$name}') {
-        $cname: selector('margin-left-#{$name}');
+        $cname: selector('mar-l-#{$name}');
         /**
           * @name       	#{$cname}
           * @namespace       sugar.scss.core.class
@@ -114,12 +253,12 @@
           * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
           */
         .#{$cname} {
-          margin-left: space($name);
+          margin-left: $size;
         }
       }
 
       @if class-match-namespace('sugar.helper.margin.right.#{$name}') {
-        $cname: selector('margin-right-#{$name}');
+        $cname: selector('mar-r-#{$name}');
         /**
           * @name       	#{$cname}
           * @namespace       sugar.scss.core.class
@@ -136,12 +275,12 @@
           * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
           */
         .#{$cname} {
-          margin-right: space($name);
+          margin-right: $size;
         }
       }
 
       @if class-match-namespace('sugar.helper.margin.x.#{$name}') {
-        $cname: selector('margin-x-#{$name}');
+        $cname: selector('mar-x-#{$name}');
         /**
           * @name       	#{$cname}
           * @namespace       sugar.scss.core.class
@@ -158,13 +297,13 @@
           * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
           */
         .#{$cname} {
-          margin-left: space($name);
-          margin-right: space($name);
+          margin-left: $size;
+          margin-right: $size;
         }
       }
 
       @if class-match-namespace('sugar.helper.margin.y.#{$name}') {
-        $cname: selector('margin-y-#{$name}');
+        $cname: selector('mar-y-#{$name}');
         /**
           * @name       	#{$cname}
           * @namespace       sugar.scss.core.class
@@ -181,15 +320,15 @@
           * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
           */
         .#{$cname} {
-          margin-top: space($name);
-          margin-bottom: space($name);
+          margin-top: $size;
+          margin-bottom: $size;
         }
       }
     }
 
     @if class-match-namespace('sugar.helper.margin.no') {
       /**
-      * @name       	#{sel(no-m)}
+      * @name       	#{sel(no-mar)}
       * @namespace       sugar.scss.core.class
       * @class-namespace           sugar.helper.margin.no
       * @type        class
@@ -197,19 +336,19 @@
       * Reset all margins
       *
       * @example 	html
-      * <div class="#{sel(no-m)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+      * <div class="#{sel(no-mar)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
       *
       * @since       1.0.0
       * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
       */
-      .#{sel(no-margin)} {
+      .#{sel(no-mar)} {
         margin: 0 !important;
       }
     }
 
     @if class-match-namespace('sugar.helper.margin.no.top') {
       /**
-      * @name       	#{sel(no-margin-top)}
+      * @name       	#{sel(no-mar-t)}
       * @namespace       sugar.scss.core.class
       * @class-namespace           sugar.helper.margin.no.top
       * @type        class
@@ -217,19 +356,19 @@
       * Reset **top** margin
       *
       * @example 	html
-      * <div class="#{sel(no-margin-top)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+      * <div class="#{sel(no-mar-t)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
       *
       * @since       1.0.0
       * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
       */
-      .#{sel(no-margin-top)} {
+      .#{sel(no-mar-t)} {
         margin-top: 0 !important;
       }
     }
 
     @if class-match-namespace('sugar.helper.margin.no.right') {
       /**
-        * @name       	#{sel(no-margin-right)}
+        * @name       	#{sel(no-mar-r)}
         * @namespace       sugar.scss.core.class
         * @class-namespace           sugar.helper.margin.no.right
         * @type        class
@@ -237,19 +376,19 @@
         * Reset **right** margin
         *
         * @example 	html
-        * <div class="#{sel(no-margin-right)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+        * <div class="#{sel(no-mar-r)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
         *
         * @since       1.0.0
         * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
         */
-      .#{sel(no-margin-right)} {
+      .#{sel(no-mar-r)} {
         margin-right: 0 !important;
       }
     }
 
     @if class-match-namespace('sugar.helper.margin.no.bottom') {
       /**
-        * @name       	#{sel(no-margin-bottom)}
+        * @name       	#{sel(no-mar-b)}
         * @namespace       sugar.scss.core.class
         * @class-namespace           sugar.helper.margin.no.bottom
         * @type        class
@@ -257,19 +396,19 @@
         * Reset **bottom** margin
         *
         * @example 	html
-        * <div class="#{sel(no-margin-bottom)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+        * <div class="#{sel(no-mar-b)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
         *
         * @since       1.0.0
         * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
         */
-      .#{sel(no-margin-bottom)} {
+      .#{sel(no-mar-b)} {
         margin-bottom: 0 !important;
       }
     }
 
     @if class-match-namespace('sugar.helper.margin.no.left') {
       /**
-        * @name       	#{sel(no-margin-left)}
+        * @name       	#{sel(no-mar-l)}
         * @namespace       sugar.scss.core.class
         * @class-namespace           sugar.helper.margin.no.left
         * @type        class
@@ -277,19 +416,19 @@
         * Reset **left** margin
         *
         * @example 	html
-        * <div class="#{sel(no-margin-left)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+        * <div class="#{sel(no-mar-l)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
         *
         * @since       1.0.0
         * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
         */
-      .#{sel(no-margin-left)} {
+      .#{sel(no-mar-l)} {
         margin-left: 0 !important;
       }
     }
 
     @if class-match-namespace('sugar.helper.margin.no.x') {
       /**
-        * @name       	#{sel(no-margin-x)}
+        * @name       	#{sel(no-mar-x)}
         * @namespace       sugar.scss.core.class
         * @class-namespace           sugar.helper.margin.no.x
         * @type        class
@@ -297,12 +436,12 @@
         * Reset **left** and **right** margins
         *
         * @example 	html
-        * <div class="#{sel(no-margin-x)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+        * <div class="#{sel(no-mar-x)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
         *
         * @since       1.0.0
         * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
         */
-      .#{sel(no-margin-x)} {
+      .#{sel(no-mar-x)} {
         margin-left: 0 !important;
         margin-right: 0 !important;
       }
@@ -310,7 +449,7 @@
 
     @if class-match-namespace('sugar.helper.margin.no.y') {
       /**
-        * @name       	#{sel(no-margin-y)}
+        * @name       	#{sel(no-mar-y)}
         * @namespace       sugar.scss.core.class
         * @class-namespace           sugar.helper.margin.no.y
         * @type        class
@@ -318,7 +457,7 @@
         * Reset **top** and **bottom** margins
         *
         * @example 	html
-        * <div class="#{sel(no-margin-y)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+        * <div class="#{sel(no-mar-y)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
         *
         * @since       1.0.0
         * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
