--- a/packages/components/s-filtrable-input-component/src/css/index.css
+++ b/packages/components/s-filtrable-input-component/src/css/index.css
@@ -2,10 +2,6 @@
 
 @sugar.ui.classes;
 
-.layout-1 {
+/* .layout-1 {
   @sugar.layout ('1 2 3');
-}
-
-/* .s-filtrable-input__list {
-  @sugar.style.apply (list-default);
 } */
