--- a/packages/websites/coffeekraken-io/src/css/06_organisms/homepage-welcome.css
+++ b/packages/websites/coffeekraken-io/src/css/06_organisms/homepage-welcome.css
@@ -1,9 +1,22 @@
 #homepage-welcome {
-  @sugar.gradient (sugar.color(complementary, --darken 30), background, $type: radial, $x: 50%, $y: 100%);
+  @sugar.gradient (sugar.color(complementary, --darken 45 --desaturate 50), background, $type: radial, $x: 50%, $y: 100%);
+  height: 70vh;
+  min-height: 600px;
+  position: relative;
 
-  s-inline-svg {
+  /* s-inline-svg {
     position: relative;
     left: 50%;
     transform: translateX(-50%);
+  } */
+
+  .__illustration {
+    position: absolute;
+    @sugar.align.abs (center);
+  }
+
+  .__content {
+    @sugar.align.abs (center);
+    margin-left: -100px;
   }
 }
