--- a/packages/websites/coffeekraken-io/src/css/06_organisms/all.css
+++ b/packages/websites/coffeekraken-io/src/css/06_organisms/all.css
@@ -4,4 +4,5 @@
  * An organism can contain other molecules or atoms and does not have to relay on his ancestors
  * to be properly displayed.
  */
-@import 'homepage-welcome';
+@import 'welcome';
+@import 'quote';
