--- a/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
+++ b/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
@@ -28,6 +28,7 @@
         }
         .s-filtrable-input__list-item {
             @sugar.depth(20);
+            border-radius: 0 !important;
         }
     }
 
