--- a/packages/websites/coffeekraken-io/src/views/pages/doc/doc.css
+++ b/packages/websites/coffeekraken-io/src/views/pages/doc/doc.css
@@ -1,15 +1,85 @@
 #doc {
 
+    [class^="platform-"] {
+        font-size: sugar.font.size(70);
+        margin-right: sugar.space(10);
+    }
+    .platform-js {
+        @sugar.asset.platform(js);
+    }
+    .platform-ts {
+        @sugar.asset.platform(ts);
+    }
+    .platform-node {
+        @sugar.asset.platform(node);
+    }
+
+    .s-avatar {
+        border: solid 2px sugar.color(accent);
+    }
+    .__author {
+
+    }
+    .__contributors {
+        .s-avatar {
+            margin-left: -20px;
+        }
+    }
+
+    .__banner {
+        position: relative;
+
+        .s-grid-12 {
+            position: relative;
+            z-index: 10;
+        }
+
+        &:before {
+            content: '';
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            @sugar.gradient (sugar.color(accent, gradientStart), sugar.color(accent, gradientEnd), $angle: 90);
+            clip-path: polygon(100px 0%, 100% 0, 100% 100%, 0% 100%);
+        }
+        &:after {
+            content: '';
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 50%;
+            height: 100%;
+            @sugar.gradient (sugar.color(complementary, gradientStart), sugar.color(complementary, gradientEnd), $angle: 90);
+            clip-path: polygon(0% 0%, 100% 0, calc(100% - 100px) 100%, 0% 100%);
+            transition: all ease-in-out 0.2s;
+        }
+    }
+
+    .__toolbar {
+
+        position: sticky;
+        top: 0;
+        z-index: 100;
+
+        [class^="platform-"] {
+            font-size: 1em;
+        }
+    }
 
     .__nav {
-        .s-list {
+        [class*="s-list"] {
             overflow: hidden;
             max-height: 0; 
             opacity: 0;
             transition: all .2s ease-in-out;
+            margin-left: 0.4em;
         }
 
-        .__nav-group[active] + .s-list {
+        .__nav-group[active] + [class*="s-list"] {
             opacity: 1;
             max-height: 3000px;
         }
@@ -22,23 +92,21 @@
         .s-h3 {
             color: sugar.color(complementary);
             transition: color .2s ease-in-out;
-        }
-
-        
+        }        
 
         .__nav-group-toggle {
             display: inline-block;
-            width: 1em;
-            height: 1em;
+            width: 0.8em;
+            height: 0.8em;
             border: 1px solid white;
             position: relative;
-            top: 0.1em;
+            top: 0.05em;
             margin-right: 0.2em;
 
             &:before, &:after {
                 content: '';
                 display: block;
-                width: 60%; height: 2px;
+                width: 50%; height: 2px;
                 background: white;
                 position: absolute;
                 top: 50%; left: 50%;
